project(B_ext)

add_executable(add.uw-01.elf add.uw-01.S)
add_executable(andn-01.elf andn-01.S)
add_executable(bclr-01.elf bclr-01.S)
add_executable(bclri-01.elf bclri-01.S)
add_executable(bext-01.elf bext-01.S)
add_executable(bexti-01.elf bexti-01.S)
add_executable(binv-01.elf binv-01.S)
add_executable(binvi-01.elf binvi-01.S)
add_executable(bset-01.elf bset-01.S)
add_executable(bseti-01.elf bseti-01.S)
add_executable(clmul-01.elf clmul-01.S)
add_executable(clmulh-01.elf clmulh-01.S)
add_executable(clmulr-01.elf clmulr-01.S)
add_executable(clz-01.elf clz-01.S)
add_executable(clzw-01.elf clzw-01.S)
add_executable(cpop-01.elf cpop-01.S)
add_executable(cpopw-01.elf cpopw-01.S)
add_executable(ctz-01.elf ctz-01.S)
add_executable(ctzw-01.elf ctzw-01.S)
add_executable(max-01.elf max-01.S)
add_executable(maxu-01.elf maxu-01.S)
add_executable(min-01.elf min-01.S)
add_executable(minu-01.elf minu-01.S)
add_executable(orcb_64-01.elf orcb_64-01.S)
add_executable(orn-01.elf orn-01.S)
add_executable(rev8-01.elf rev8-01.S)
add_executable(rol-01.elf rol-01.S)
add_executable(rolw-01.elf rolw-01.S)
add_executable(ror-01.elf ror-01.S)
add_executable(rori-01.elf rori-01.S)
add_executable(roriw-01.elf roriw-01.S)
add_executable(rorw-01.elf rorw-01.S)
add_executable(sext.b-01.elf sext.b-01.S)
add_executable(sext.h-01.elf sext.h-01.S)
add_executable(sh1add-01.elf sh1add-01.S)
add_executable(sh1add.uw-01.elf sh1add.uw-01.S)
add_executable(sh2add-01.elf sh2add-01.S)
add_executable(sh2add.uw-01.elf sh2add.uw-01.S)
add_executable(sh3add-01.elf sh3add-01.S)
add_executable(sh3add.uw-01.elf sh3add.uw-01.S)
add_executable(slli.uw-01.elf slli.uw-01.S)
add_executable(xnor-01.elf xnor-01.S)
add_executable(zext.h-01.elf zext.h-01.S)
add_executable(zext.h_64-01.elf zext.h_64-01.S)
