project(C_ext)

add_executable(cadd-01.elf cadd-01.S)
add_executable(caddi-01.elf caddi-01.S)
add_executable(caddi16sp-01.elf caddi16sp-01.S)
add_executable(caddi4spn-01.elf caddi4spn-01.S)
add_executable(caddiw-01.elf caddiw-01.S)
add_executable(caddw-01.elf caddw-01.S)
add_executable(cand-01.elf cand-01.S)
add_executable(candi-01.elf candi-01.S)
add_executable(cbeqz-01.elf cbeqz-01.S)
add_executable(cbnez-01.elf cbnez-01.S)
add_executable(cebreak-01.elf cebreak-01.S)
add_executable(cj-01.elf cj-01.S)
add_executable(cjalr-01.elf cjalr-01.S)
add_executable(cjr-01.elf cjr-01.S)
#add_executable(cld-01.elf cld-01.S)
#add_executable(cldsp-01.elf cldsp-01.S)
add_executable(cli-01.elf cli-01.S)
add_executable(clui-01.elf clui-01.S)
#add_executable(clw-01.elf clw-01.S)
#add_executable(clwsp-01.elf clwsp-01.S)
add_executable(cmv-01.elf cmv-01.S)
add_executable(cnop-01.elf cnop-01.S)
add_executable(cor-01.elf cor-01.S)
add_executable(csd-01.elf csd-01.S)
add_executable(csdsp-01.elf csdsp-01.S)
add_executable(cslli-01.elf cslli-01.S)
add_executable(csrai-01.elf csrai-01.S)
add_executable(csrli-01.elf csrli-01.S)
add_executable(csub-01.elf csub-01.S)
add_executable(csubw-01.elf csubw-01.S)
add_executable(csw-01.elf csw-01.S)
add_executable(cswsp-01.elf cswsp-01.S)
add_executable(cxor-01.elf cxor-01.S)
