project(D_ext)

add_executable(fcvt.d.l_b25-01.elf fcvt.d.l_b25-01.S)
add_executable(fcvt.d.l_b26-01.elf fcvt.d.l_b26-01.S)
add_executable(fcvt.d.lu_b25-01.elf fcvt.d.lu_b25-01.S)
add_executable(fcvt.d.lu_b26-01.elf fcvt.d.lu_b26-01.S)
add_executable(fcvt.l.d_b1-01.elf fcvt.l.d_b1-01.S)
add_executable(fcvt.l.d_b22-01.elf fcvt.l.d_b22-01.S)
add_executable(fcvt.l.d_b23-01.elf fcvt.l.d_b23-01.S)
add_executable(fcvt.l.d_b24-01.elf fcvt.l.d_b24-01.S)
add_executable(fcvt.l.d_b27-01.elf fcvt.l.d_b27-01.S)
add_executable(fcvt.l.d_b28-01.elf fcvt.l.d_b28-01.S)
add_executable(fcvt.l.d_b29-01.elf fcvt.l.d_b29-01.S)
add_executable(fcvt.lu.d_b1-01.elf fcvt.lu.d_b1-01.S)
add_executable(fcvt.lu.d_b22-01.elf fcvt.lu.d_b22-01.S)
add_executable(fcvt.lu.d_b23-01.elf fcvt.lu.d_b23-01.S)
add_executable(fcvt.lu.d_b24-01.elf fcvt.lu.d_b24-01.S)
add_executable(fcvt.lu.d_b27-01.elf fcvt.lu.d_b27-01.S)
add_executable(fcvt.lu.d_b28-01.elf fcvt.lu.d_b28-01.S)
add_executable(fcvt.lu.d_b29-01.elf fcvt.lu.d_b29-01.S)
add_executable(fmv.d.x_b25-01.elf fmv.d.x_b25-01.S)
add_executable(fmv.d.x_b26-01.elf fmv.d.x_b26-01.S)
add_executable(fmv.x.d_b1-01.elf fmv.x.d_b1-01.S)
add_executable(fmv.x.d_b22-01.elf fmv.x.d_b22-01.S)
add_executable(fmv.x.d_b23-01.elf fmv.x.d_b23-01.S)
add_executable(fmv.x.d_b24-01.elf fmv.x.d_b24-01.S)
add_executable(fmv.x.d_b27-01.elf fmv.x.d_b27-01.S)
add_executable(fmv.x.d_b28-01.elf fmv.x.d_b28-01.S)
add_executable(fmv.x.d_b29-01.elf fmv.x.d_b29-01.S)
