project(F_ext)

add_executable(fcvt.l.s_b1-01.elf fcvt.l.s_b1-01.S)
add_executable(fcvt.l.s_b22-01.elf fcvt.l.s_b22-01.S)
add_executable(fcvt.l.s_b23-01.elf fcvt.l.s_b23-01.S)
add_executable(fcvt.l.s_b24-01.elf fcvt.l.s_b24-01.S)
add_executable(fcvt.l.s_b27-01.elf fcvt.l.s_b27-01.S)
add_executable(fcvt.l.s_b28-01.elf fcvt.l.s_b28-01.S)
add_executable(fcvt.l.s_b29-01.elf fcvt.l.s_b29-01.S)
add_executable(fcvt.lu.s_b1-01.elf fcvt.lu.s_b1-01.S)
add_executable(fcvt.lu.s_b22-01.elf fcvt.lu.s_b22-01.S)
add_executable(fcvt.lu.s_b23-01.elf fcvt.lu.s_b23-01.S)
add_executable(fcvt.lu.s_b24-01.elf fcvt.lu.s_b24-01.S)
add_executable(fcvt.lu.s_b27-01.elf fcvt.lu.s_b27-01.S)
add_executable(fcvt.lu.s_b28-01.elf fcvt.lu.s_b28-01.S)
add_executable(fcvt.lu.s_b29-01.elf fcvt.lu.s_b29-01.S)
add_executable(fcvt.s.l_b25-01.elf fcvt.s.l_b25-01.S)
add_executable(fcvt.s.l_b26-01.elf fcvt.s.l_b26-01.S)
add_executable(fcvt.s.lu_b25-01.elf fcvt.s.lu_b25-01.S)
add_executable(fcvt.s.lu_b26-01.elf fcvt.s.lu_b26-01.S)
