project(I_ext)

add_executable(add-01.elf add-01.S)
add_executable(addi-01.elf addi-01.S)
add_executable(addiw-01.elf addiw-01.S)
add_executable(addw-01.elf addw-01.S)
add_executable(and-01.elf and-01.S)
add_executable(andi-01.elf andi-01.S)
add_executable(auipc-01.elf auipc-01.S)
add_executable(beq-01.elf beq-01.S)
add_executable(bge-01.elf bge-01.S)
add_executable(bgeu-01.elf bgeu-01.S)
add_executable(blt-01.elf blt-01.S)
add_executable(bltu-01.elf bltu-01.S)
#add_executable(bne-01.elf bne-01.S)
add_executable(fence-01.elf fence-01.S)
add_executable(jal-01.elf jal-01.S)
#add_executable(jalr-01.elf jalr-01.S)
#add_executable(lb-align-01.elf lb-align-01.S)
#add_executable(lbu-align-01.elf lbu-align-01.S)
#add_executable(ld-align-01.elf ld-align-01.S)
#add_executable(lh-align-01.elf lh-align-01.S)
#add_executable(lhu-align-01.elf lhu-align-01.S)
add_executable(lui-01.elf lui-01.S)
#add_executable(lw-align-01.elf lw-align-01.S)
#add_executable(lwu-align-01.elf lwu-align-01.S)
#add_executable(misalign1-jalr-01.elf misalign1-jalr-01.S)
add_executable(or-01.elf or-01.S)
add_executable(ori-01.elf ori-01.S)
#add_executable(sb-align-01.elf sb-align-01.S)
#add_executable(sd-align-01.elf sd-align-01.S)
#add_executable(sh-align-01.elf sh-align-01.S)
add_executable(sll-01.elf sll-01.S)
add_executable(slli-01.elf slli-01.S)
add_executable(slliw-01.elf slliw-01.S)
add_executable(sllw-01.elf sllw-01.S)
add_executable(slt-01.elf slt-01.S)
add_executable(slti-01.elf slti-01.S)
add_executable(sltiu-01.elf sltiu-01.S)
add_executable(sltu-01.elf sltu-01.S)
add_executable(sra-01.elf sra-01.S)
add_executable(srai-01.elf srai-01.S)
add_executable(sraiw-01.elf sraiw-01.S)
add_executable(sraw-01.elf sraw-01.S)
add_executable(srl-01.elf srl-01.S)
add_executable(srli-01.elf srli-01.S)
add_executable(srliw-01.elf srliw-01.S)
add_executable(srlw-01.elf srlw-01.S)
add_executable(sub-01.elf sub-01.S)
add_executable(subw-01.elf subw-01.S)
add_executable(sw-align-01.elf sw-align-01.S)
add_executable(xor-01.elf xor-01.S)
add_executable(xori-01.elf xori-01.S)
