project(K_ext)

add_executable(aes64ds-01.elf aes64ds-01.S)
add_executable(aes64dsm-01.elf aes64dsm-01.S)
add_executable(aes64dsm-rwp1.elf aes64dsm-rwp1.S)
add_executable(aes64ds-rwp1.elf aes64ds-rwp1.S)
add_executable(aes64es-01.elf aes64es-01.S)
add_executable(aes64esm-01.elf aes64esm-01.S)
add_executable(aes64esm-rwp1.elf aes64esm-rwp1.S)
add_executable(aes64es-rwp1.elf aes64es-rwp1.S)
add_executable(aes64im-01.elf aes64im-01.S)
add_executable(aes64im-rwp1.elf aes64im-rwp1.S)
add_executable(aes64im-rwp2.elf aes64im-rwp2.S)
add_executable(aes64ks1i-01.elf aes64ks1i-01.S)
add_executable(aes64ks2-01.elf aes64ks2-01.S)
add_executable(brev8-01.elf brev8-01.S)
add_executable(pack-01.elf pack-01.S)
add_executable(packh-01.elf packh-01.S)
add_executable(packw-01.elf packw-01.S)
add_executable(sha256sig0-01.elf sha256sig0-01.S)
add_executable(sha256sig0-rwp1.elf sha256sig0-rwp1.S)
add_executable(sha256sig0-rwp2.elf sha256sig0-rwp2.S)
add_executable(sha256sig1-01.elf sha256sig1-01.S)
add_executable(sha256sig1-rwp1.elf sha256sig1-rwp1.S)
add_executable(sha256sig1-rwp2.elf sha256sig1-rwp2.S)
add_executable(sha256sum0-01.elf sha256sum0-01.S)
add_executable(sha256sum0-rwp1.elf sha256sum0-rwp1.S)
add_executable(sha256sum0-rwp2.elf sha256sum0-rwp2.S)
add_executable(sha256sum1-01.elf sha256sum1-01.S)
add_executable(sha256sum1-rwp1.elf sha256sum1-rwp1.S)
add_executable(sha256sum1-rwp2.elf sha256sum1-rwp2.S)
add_executable(sha512sig0-01.elf sha512sig0-01.S)
add_executable(sha512sig0-rwp1.elf sha512sig0-rwp1.S)
add_executable(sha512sig0-rwp2.elf sha512sig0-rwp2.S)
add_executable(sha512sig1-01.elf sha512sig1-01.S)
add_executable(sha512sig1-rwp1.elf sha512sig1-rwp1.S)
add_executable(sha512sig1-rwp2.elf sha512sig1-rwp2.S)
add_executable(sha512sum0-01.elf sha512sum0-01.S)
add_executable(sha512sum0-rwp1.elf sha512sum0-rwp1.S)
add_executable(sha512sum0-rwp2.elf sha512sum0-rwp2.S)
add_executable(sha512sum1-01.elf sha512sum1-01.S)
add_executable(sha512sum1-rwp1.elf sha512sum1-rwp1.S)
add_executable(sha512sum1-rwp2.elf sha512sum1-rwp2.S)
add_executable(sm3p0-01.elf sm3p0-01.S)
add_executable(sm3p0-rwp1.elf sm3p0-rwp1.S)
add_executable(sm3p0-rwp2.elf sm3p0-rwp2.S)
add_executable(sm3p1-01.elf sm3p1-01.S)
add_executable(sm3p1-rwp1.elf sm3p1-rwp1.S)
add_executable(sm3p1-rwp2.elf sm3p1-rwp2.S)
add_executable(sm4ed-01.elf sm4ed-01.S)
add_executable(sm4ed-rwp1.elf sm4ed-rwp1.S)
add_executable(sm4ks-01.elf sm4ks-01.S)
add_executable(sm4ks-rwp1.elf sm4ks-rwp1.S)
add_executable(xperm4-01.elf xperm4-01.S)
add_executable(xperm8-01.elf xperm8-01.S)
