project(M_ext)

add_executable(div-01.elf div-01.S)
add_executable(divu-01.elf divu-01.S)
add_executable(divuw-01.elf divuw-01.S)
add_executable(divw-01.elf divw-01.S)
add_executable(mul-01.elf mul-01.S)
add_executable(mulh-01.elf mulh-01.S)
add_executable(mulhsu-01.elf mulhsu-01.S)
add_executable(mulhu-01.elf mulhu-01.S)
add_executable(mulw-01.elf mulw-01.S)
add_executable(rem-01.elf rem-01.S)
add_executable(remu-01.elf remu-01.S)
add_executable(remuw-01.elf remuw-01.S)
add_executable(remw-01.elf remw-01.S)
