project(privilege_ext)

add_executable(ebreak.elf ebreak.S)
add_executable(ecall.elf ecall.S)
#add_executable(misalign2-jalr-01.elf misalign2-jalr-01.S)
#add_executable(misalign-beq-01.elf misalign-beq-01.S)
#add_executable(misalign-bge-01.elf misalign-bge-01.S)
#add_executable(misalign-bgeu-01.elf misalign-bgeu-01.S)
#add_executable(misalign-blt-01.elf misalign-blt-01.S)
#add_executable(misalign-bltu-01.elf misalign-bltu-01.S)
#add_executable(misalign-bne-01.elf misalign-bne-01.S)
#add_executable(misalign-jal-01.elf misalign-jal-01.S)
#add_executable(misalign-ld-01.elf misalign-ld-01.S)
#add_executable(misalign-lh-01.elf misalign-lh-01.S)
#add_executable(misalign-lhu-01.elf misalign-lhu-01.S)
#add_executable(misalign-lw-01.elf misalign-lw-01.S)
#add_executable(misalign-lwu-01.elf misalign-lwu-01.S)
#add_executable(misalign-sd-01.elf misalign-sd-01.S)
#add_executable(misalign-sh-01.elf misalign-sh-01.S)
#add_executable(misalign-sw-01.elf misalign-sw-01.S)
